Fix gap in media query.

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h6 {
 	}
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.site-header {
 		position: relative;
@@ -123,7 +123,7 @@ h6 {
 	display: block;
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.site-logo {
 		margin-left: 1rem;
@@ -158,7 +158,7 @@ h6 {
 	}
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.open-menu,
 	.close-menu {
@@ -231,7 +231,7 @@ h6 {
 
 /* Menu outer container, modal background */
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.menu-outer {
 		display: flex;
@@ -276,7 +276,7 @@ h6 {
 	}
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.menu-inner {
 		min-width: 40%;
@@ -345,7 +345,7 @@ h6 {
 	}
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.menu-links {
 		text-align: right;
@@ -381,7 +381,7 @@ h6 {
 	padding: 0.75rem var(--side-padding-desktop);
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.footer-columns {
 		padding-left: var(--side-padding-mobile);
@@ -496,7 +496,7 @@ h6 {
 	padding-right: var(--side-padding-desktop);
 }
 
-@media (max-width: 1079px) {
+@media (max-width: 1079.99px) {
 
 	.entry-content,
 	.editor-styles-wrapper {
